--- a/intro2R/Intro2R.Rmd
+++ b/intro2R/Intro2R.Rmd
@@ -1,23 +1,36 @@
 ---
 title: "R for Biologist - An Introduction to R"
 author: "Bioinformatics Core"
-date: "2019-08-19"
+date: "`r format(Sys.Date())`"
 output:
   html_document:
     keep_md: yes
   pdf_document: default
 ---
 
-<style type="text/css">
+```{css echo=FALSE}
 .colsel {
 background-color: lightyellow;
 }
-</style>
+```
+
+```{r echo=FALSE}
+library(knitr)
+colFmt = function(x,color){
+  outputFormat = opts_knit$get("rmarkdown.pandoc.to")
+  if(outputFormat == 'latex')
+    paste("\\textcolor{",color,"}{",x,"}",sep="")
+  else if(outputFormat == 'html')
+    paste("<font color='",color,"'>",x,"</font>",sep="")
+  else
+    x
+}
+```
 
 
-
-
-
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(class.source = "colsel")
+```
 
 R and RStudio
 ========================================================
@@ -124,129 +137,17 @@ There are three concepts that we should be familiar with before working in R:
 
 * Operators
 
-<table class="table table-striped" style="width: auto !important; ">
-<caption>Assignment Operators in R</caption>
- <thead>
-  <tr>
-   <th style="text-align:center;"> Operator </th>
-   <th style="text-align:center;"> Description </th>
-  </tr>
- </thead>
-<tbody>
-  <tr>
-   <td style="text-align:center;"> &lt;-, = </td>
-   <td style="text-align:center;"> Assignment </td>
-  </tr>
-</tbody>
-</table>
+```{r echo=FALSE, results= 'asis'}
+library(knitr)
+library(kableExtra)
+kable(data.frame(Operator=paste("<-", " =", sep=","), Description="Assignment", stringsAsFactors=F), align='c', caption="Assignment Operators in R") %>% kable_styling(bootstrap_options="striped", full_width=F, position="left")
 
-<table class="table table-striped" style="width: auto !important; ">
-<caption>Arithmetic Operators in R</caption>
- <thead>
-  <tr>
-   <th style="text-align:center;"> Operator </th>
-   <th style="text-align:center;"> Description </th>
-  </tr>
- </thead>
-<tbody>
-  <tr>
-   <td style="text-align:center;"> \+ </td>
-   <td style="text-align:center;"> Addition </td>
-  </tr>
-  <tr>
-   <td style="text-align:center;"> \- </td>
-   <td style="text-align:center;"> Subtraction </td>
-  </tr>
-  <tr>
-   <td style="text-align:center;"> \* </td>
-   <td style="text-align:center;"> Multiplication </td>
-  </tr>
-  <tr>
-   <td style="text-align:center;"> / </td>
-   <td style="text-align:center;"> Division </td>
-  </tr>
-  <tr>
-   <td style="text-align:center;"> ^ </td>
-   <td style="text-align:center;"> Exponent </td>
-  </tr>
-  <tr>
-   <td style="text-align:center;"> %% </td>
-   <td style="text-align:center;"> Modulus </td>
-  </tr>
-  <tr>
-   <td style="text-align:center;"> %/% </td>
-   <td style="text-align:center;"> Integer Division </td>
-  </tr>
-</tbody>
-</table>
+kable(data.frame(Operator=c("\\+", "\\-", "\\*", "/", "^", "%%", "%/%"), Description=c("Addition", "Subtraction", "Multiplication", "Division", "Exponent", "Modulus", "Integer Division"), stringsAsFactors=F), align='c', caption="Arithmetic Operators in R") %>% kable_styling(bootstrap_options="striped", full_width=F, position="left")
 
-<table class="table table-striped" style="width: auto !important; ">
-<caption>Relational Operators in R</caption>
- <thead>
-  <tr>
-   <th style="text-align:center;"> Operator </th>
-   <th style="text-align:center;"> Description </th>
-  </tr>
- </thead>
-<tbody>
-  <tr>
-   <td style="text-align:center;"> &lt; </td>
-   <td style="text-align:center;"> Less than </td>
-  </tr>
-  <tr>
-   <td style="text-align:center;"> &gt; </td>
-   <td style="text-align:center;"> Greater than </td>
-  </tr>
-  <tr>
-   <td style="text-align:center;"> &lt;= </td>
-   <td style="text-align:center;"> Less than or equal to </td>
-  </tr>
-  <tr>
-   <td style="text-align:center;"> &gt;= </td>
-   <td style="text-align:center;"> Greater than or equal to </td>
-  </tr>
-  <tr>
-   <td style="text-align:center;"> == </td>
-   <td style="text-align:center;"> Equal to </td>
-  </tr>
-  <tr>
-   <td style="text-align:center;"> != </td>
-   <td style="text-align:center;"> Not equal to </td>
-  </tr>
-</tbody>
-</table>
+kable(data.frame(Operator=c("<", ">", "<=", ">=", "==", "!="), Description=c("Less than", "Greater than", "Less than or equal to", "Greater than or equal to", "Equal to", "Not equal to"), stringsAsFactors=F), align='c', caption="Relational Operators in R") %>% kable_styling(bootstrap_options="striped", full_width=F, position="left")
 
-<table class="table table-striped" style="width: auto !important; ">
-<caption>Logical Operators in R</caption>
- <thead>
-  <tr>
-   <th style="text-align:center;"> Operator </th>
-   <th style="text-align:center;"> Description </th>
-  </tr>
- </thead>
-<tbody>
-  <tr>
-   <td style="text-align:center;"> ! </td>
-   <td style="text-align:center;"> Logical NOT </td>
-  </tr>
-  <tr>
-   <td style="text-align:center;"> &amp; </td>
-   <td style="text-align:center;"> Element-wise logical AND </td>
-  </tr>
-  <tr>
-   <td style="text-align:center;"> &amp;&amp; </td>
-   <td style="text-align:center;"> Logical AND </td>
-  </tr>
-  <tr>
-   <td style="text-align:center;"> | </td>
-   <td style="text-align:center;"> Element-wise logical OR </td>
-  </tr>
-  <tr>
-   <td style="text-align:center;"> || </td>
-   <td style="text-align:center;"> Logical OR </td>
-  </tr>
-</tbody>
-</table>
+kable(data.frame(Operator=c("!", "&", "&&", "|", "||"), Description=c("Logical NOT", "Element-wise logical AND", "Logical AND", "Element-wise logical OR", "Logical OR"), stringsAsFactors=F), align='c', caption="Logical Operators in R") %>% kable_styling(bootstrap_options="striped", full_width=F, position="left")
+```
 
 * Functions
 
@@ -268,470 +169,176 @@ Topic 2. Basic data types in R
 ### Simple variables: variables that have a numeric value, a character value (such as a string), or a logical value (True or False)
 
 Examples of numeric values.
-
-```{.r .colsel}
+```{r, class.source = "colsel"}
 # assign number 150 to variable a.
 a <- 150
 a
-```
-
-```
-## [1] 150
-```
-
-```{.r .colsel}
 # assign a number in scientific format to variable b.
 b <- 3e-2
 b
 ```
 
-```
-## [1] 0.03
-```
-
 Examples of character values.
-
-```{.r .colsel}
+```{r}
 # assign a string "Professor" to variable title
 title <- "Professor"
 title
-```
-
-```
-## [1] "Professor"
-```
-
-```{.r .colsel}
 # assign a string "Hello World" to variable hello
 hello <- "Hello World"
 hello
 ```
 
-```
-## [1] "Hello World"
-```
-
 Examples of logical values.
-
-```{.r .colsel}
+```{r}
 # assign logical value "TRUE" to variable is_female
 is_female <- TRUE
 is_female
-```
-
-```
-## [1] TRUE
-```
-
-```{.r .colsel}
 # assign logical value "FALSE" to variable is_male
 is_male <- FALSE
 is_male
-```
-
-```
-## [1] FALSE
-```
-
-```{.r .colsel}
 # assign logical value to a variable by logical operation
 age <- 20
 is_adult <- age > 18
 is_adult
 ```
 
-```
-## [1] TRUE
-```
-
 To find out the type of variable.
-
-```{.r .colsel}
+```{r}
 class(is_female)
-```
-
-```
-## [1] "logical"
-```
-
-```{.r .colsel}
 # To check whether the variable is a specific type
 is.numeric(hello)
-```
-
-```
-## [1] FALSE
-```
-
-```{.r .colsel}
 is.numeric(a)
-```
-
-```
-## [1] TRUE
-```
-
-```{.r .colsel}
 is.character(hello)
 ```
 
-```
-## [1] TRUE
-```
-
 The rule to convert a logical variable to numeric: TRUE > 1, FALSE > 0
-
-```{.r .colsel}
+```{r}
 as.numeric(is_female)
-```
-
-```
-## [1] 1
-```
-
-```{.r .colsel}
 as.numeric(is_male)
 ```
 
-```
-## [1] 0
-```
-
 R does not know how to convert a numeric variable to a character variable.
-
-```{.r .colsel}
+```{r}
 b
-```
-
-```
-## [1] 0.03
-```
-
-```{.r .colsel}
 as.character(b)
-```
-
-```
-## [1] "0.03"
 ```
 
 
 ### Vectors: a vector is a combination of multiple values(numeric, character or logical) in the same object. A vector is created using the function c() (for concatenate).
 
-
-```{.r .colsel}
+```{r}
 friend_ages <- c(21, 27, 26, 32)
 friend_ages
-```
 
-```
-## [1] 21 27 26 32
-```
-
-```{.r .colsel}
 friend_names <- c("Mina", "Ella", "Anna", "Cora")
 friend_names
 ```
 
-```
-## [1] "Mina" "Ella" "Anna" "Cora"
-```
-
 One can give names to the elements of a vector.
-
-```{.r .colsel}
+```{r}
 # assign names to a vector by specifying them
 names(friend_ages) <- c("Mina", "Ella", "Anna", "Carla")
 friend_ages
-```
 
-```
-##  Mina  Ella  Anna Carla 
-##    21    27    26    32
-```
-
-```{.r .colsel}
 # assign names to a vector using another vector
 names(friend_ages) <- friend_names
 friend_ages
 ```
 
-```
-## Mina Ella Anna Cora 
-##   21   27   26   32
-```
-
 Or One may create a vector with named elements from scratch.
-
-```{.r .colsel}
+```{r}
 friend_ages <- c(Mina=21, Ella=27, Anna=26, Cora=32)
 friend_ages
 ```
 
-```
-## Mina Ella Anna Cora 
-##   21   27   26   32
-```
-
 To find out the length of a vector:
-
-```{.r .colsel}
+```{r}
 length(friend_ages)
 ```
 
-```
-## [1] 4
-```
-
 To access elements of a vector: by index, or by name if it is a named vector.
-
-```{.r .colsel}
+```{r}
 friend_ages[2]
-```
-
-```
-## Ella 
-##   27
-```
-
-```{.r .colsel}
 friend_ages["Ella"]
-```
 
-```
-## Ella 
-##   27
-```
-
-```{.r .colsel}
 friend_ages[c(1,3)]
-```
-
-```
-## Mina Anna 
-##   21   26
-```
-
-```{.r .colsel}
 friend_ages[c("Mina", "Anna")]
-```
 
-```
-## Mina Anna 
-##   21   26
-```
-
-```{.r .colsel}
 # selecting elements of a vector by excluding some of them.
 friend_ages[-3]
 ```
 
-```
-## Mina Ella Cora 
-##   21   27   32
-```
-
 To select a subset of a vector can be done by logical vector.
-
-```{.r .colsel}
+```{r}
 my_friends <- c("Mina", "Ella", "Anna", "Cora")
 my_friends
-```
-
-```
-## [1] "Mina" "Ella" "Anna" "Cora"
-```
-
-```{.r .colsel}
 has_child <- c("TRUE", "TRUE", "FALSE", "TRUE")
 has_child
-```
 
-```
-## [1] "TRUE"  "TRUE"  "FALSE" "TRUE"
-```
-
-```{.r .colsel}
 my_friends[has_child == "TRUE"]
-```
-
-```
-## [1] "Mina" "Ella" "Cora"
-```
+```  
 
    
-##### <font color='red'>NOTE: a vector can only hold elements of the same type.</font>  
+##### `r colFmt("NOTE: a vector can only hold elements of the same type.", 'red')`  
 
 
 
 ### Matrices: A matrix is like an Excel sheet containing multiple rows and columns. It is used to combine vectors of the same type.
 
-
-```{.r .colsel}
+```{r}
 col1 <- c(1,3,8,9)
 col2 <- c(2,18,27,10)
 col3 <- c(8,37,267,19)
 
 my_matrix <- cbind(col1, col2, col3)
 my_matrix
-```
 
-```
-##      col1 col2 col3
-## [1,]    1    2    8
-## [2,]    3   18   37
-## [3,]    8   27  267
-## [4,]    9   10   19
-```
-
-```{.r .colsel}
 rownames(my_matrix) <- c("row1", "row2", "row3", "row4")
 my_matrix
-```
 
-```
-##      col1 col2 col3
-## row1    1    2    8
-## row2    3   18   37
-## row3    8   27  267
-## row4    9   10   19
-```
-
-```{.r .colsel}
 t(my_matrix)
 ```
 
-```
-##      row1 row2 row3 row4
-## col1    1    3    8    9
-## col2    2   18   27   10
-## col3    8   37  267   19
-```
-
 To find out the dimension of a matrix:
-
-```{.r .colsel}
+```{r}
 ncol(my_matrix)
-```
-
-```
-## [1] 3
-```
-
-```{.r .colsel}
 nrow(my_matrix)
-```
-
-```
-## [1] 4
-```
-
-```{.r .colsel}
 dim(my_matrix)
-```
-
-```
-## [1] 4 3
 ```
 
 
 Accessing elements of a matrix is done in similar ways to accessing elements of a vector.
 
-
-```{.r .colsel}
+```{r}
 my_matrix[1,3]
-```
-
-```
-## [1] 8
-```
-
-```{.r .colsel}
 my_matrix["row1", "col3"]
 ```
 
-```
-## [1] 8
-```
-
-
-```{.r .colsel}
+```{r}
 my_matrix[1,]
-```
-
-```
-## col1 col2 col3 
-##    1    2    8
-```
-
-```{.r .colsel}
 my_matrix[,3]
 ```
 
-```
-## row1 row2 row3 row4 
-##    8   37  267   19
-```
-
-
-```{.r .colsel}
+```{r}
 my_matrix[col3 > 20,]
-```
-
-```
-##      col1 col2 col3
-## row2    3   18   37
-## row3    8   27  267
 ```
 
 
 Calculations with matrices.
 
-
-```{.r .colsel}
+```{r}
 my_matrix * 3
-```
-
-```
-##      col1 col2 col3
-## row1    3    6   24
-## row2    9   54  111
-## row3   24   81  801
-## row4   27   30   57
-```
-
-```{.r .colsel}
 log10(my_matrix)
 ```
 
-```
-##           col1     col2     col3
-## row1 0.0000000 0.301030 0.903090
-## row2 0.4771213 1.255273 1.568202
-## row3 0.9030900 1.431364 2.426511
-## row4 0.9542425 1.000000 1.278754
-```
-
 Total of each row.
-
-```{.r .colsel}
+```{r}
 rowSums(my_matrix)
 ```
 
-```
-## row1 row2 row3 row4 
-##   11   58  302   38
-```
-
 Total of each column.
-
-```{.r .colsel}
+```{r}
 colSums(my_matrix)
-```
-
-```
-## col1 col2 col3 
-##   21   57  331
 ```
 
 It is also possible to use the function apply() to apply any statistical functions to rows/columns of matrices. The advantage of using apply() is that it can take a function created by user.
@@ -746,126 +353,66 @@ FUN: the function to apply on rows/columns
 
 To calculate the mean of each row.
 
-
-```{.r .colsel}
+```{r}
 apply(my_matrix, 1, mean)
-```
-
-```
-##       row1       row2       row3       row4 
-##   3.666667  19.333333 100.666667  12.666667
 ```
 
 To calculate the median of each row
 
-
-```{.r .colsel}
+```{r}
 apply(my_matrix, 1, median)
-```
-
-```
-## row1 row2 row3 row4 
-##    2   18   27   10
 ```
 
 
 ### Factors: a factor represents categorical or groups in data. The function factor() can be used to create a factor variable.
 
-
-```{.r .colsel}
+```{r}
 friend_groups <- factor(c(1,2,1,2))
 friend_groups
 ```
 
-```
-## [1] 1 2 1 2
-## Levels: 1 2
-```
-
 In R, categories are called factor levels. The function levels() can be used to access the factor levels.
 
-
-```{.r .colsel}
+```{r}
 levels(friend_groups)
-```
-
-```
-## [1] "1" "2"
 ```
 
 Change the factor levels.
 
-
-```{.r .colsel}
+```{r}
 levels(friend_groups) <- c("best_friend", "not_best_friend")
 friend_groups
 ```
 
-```
-## [1] best_friend     not_best_friend best_friend     not_best_friend
-## Levels: best_friend not_best_friend
-```
-
 Change the order of levels.
 
-
-```{.r .colsel}
+```{r}
 levels(friend_groups) <- c("not_best_friend", "best_friend")
 friend_groups
 ```
 
-```
-## [1] not_best_friend best_friend     not_best_friend best_friend    
-## Levels: not_best_friend best_friend
-```
-
 By default, the order of factor levels is taken in the order of numeric or alphabetic.
 
-
-```{.r .colsel}
+```{r}
 friend_groups <- factor(c("not_best_friend", "best_friend", "not_best_friend", "best_friend"))
 friend_groups
 ```
 
-```
-## [1] not_best_friend best_friend     not_best_friend best_friend    
-## Levels: best_friend not_best_friend
-```
-
 The factor levels can be specified when creating the factor, if the order does not follow the default rule.
 
-
-```{.r .colsel}
+```{r}
 friend_groups <- factor(c("not_best_friend", "best_friend", "not_best_friend", "best_friend"), levels=c("not_best_friend", "best_friend"))
 friend_groups
 ```
 
-```
-## [1] not_best_friend best_friend     not_best_friend best_friend    
-## Levels: not_best_friend best_friend
-```
-
 If you want to know the number of individuals at each levels, there are two functions.
 
-
-```{.r .colsel}
+```{r}
 summary(friend_groups)
 ```
 
-```
-## not_best_friend     best_friend 
-##               2               2
-```
-
-
-```{.r .colsel}
+```{r}
 table(friend_groups)
-```
-
-```
-## friend_groups
-## not_best_friend     best_friend 
-##               2               2
 ```
 
 
@@ -873,295 +420,125 @@ table(friend_groups)
 
 A data frame can be created using the function data.frame().
 
-
-```{.r .colsel}
+```{r}
 # creating a data frame using previously defined vectors
 friends <- data.frame(name=friend_names, age=friend_ages, child=has_child)
 friends
 ```
 
-```
-##      name age child
-## Mina Mina  21  TRUE
-## Ella Ella  27  TRUE
-## Anna Anna  26 FALSE
-## Cora Cora  32  TRUE
-```
-
 To check whether a data is a data frame, use the function is.data.frame().
 
-
-```{.r .colsel}
+```{r}
 is.data.frame(friends)
 ```
 
-```
-## [1] TRUE
-```
-
-
-```{.r .colsel}
+```{r}
 is.data.frame(my_matrix)
-```
-
-```
-## [1] FALSE
 ```
 
 One can convert a object to a data frame using the function as.data.frame().
 
-
-```{.r .colsel}
+```{r}
 class(my_matrix)
 ```
 
-```
-## [1] "matrix"
-```
-
-
-```{.r .colsel}
+```{r}
 my_data <- as.data.frame(my_matrix)
 class(my_data)
 ```
 
-```
-## [1] "data.frame"
-```
-
 A data frame can be transposed in the similar way as a matrix.
 
-
-```{.r .colsel}
+```{r}
 my_data
 ```
 
-```
-##      col1 col2 col3
-## row1    1    2    8
-## row2    3   18   37
-## row3    8   27  267
-## row4    9   10   19
-```
-
-
-```{.r .colsel}
+```{r}
 t(my_data)
-```
-
-```
-##      row1 row2 row3 row4
-## col1    1    3    8    9
-## col2    2   18   27   10
-## col3    8   37  267   19
 ```
 
 To obtain a subset of a data frame can be done in similar ways as we have discussed: by index, by row/column names, or by logical values.
 
-
-```{.r .colsel}
+```{r}
 friends["Mina",]
 ```
 
-```
-##      name age child
-## Mina Mina  21  TRUE
-```
-
-
-```{.r .colsel}
+```{r}
 # The columns of a data frame can be referred to by the names of the columns
 friends
-```
-
-```
-##      name age child
-## Mina Mina  21  TRUE
-## Ella Ella  27  TRUE
-## Anna Anna  26 FALSE
-## Cora Cora  32  TRUE
-```
-
-```{.r .colsel}
 friends$age
-```
-
-```
-## [1] 21 27 26 32
-```
-
-```{.r .colsel}
 friends[friends$age > 26,]
 ```
 
-```
-##      name age child
-## Ella Ella  27  TRUE
-## Cora Cora  32  TRUE
-```
-
-
-```{.r .colsel}
+```{r}
 friends[friends$child == "TRUE",]
-```
-
-```
-##      name age child
-## Mina Mina  21  TRUE
-## Ella Ella  27  TRUE
-## Cora Cora  32  TRUE
 ```
 
 Function subset() can also be used to get a subset of a data frame.
 
-
-```{.r .colsel}
+```{r}
 # select friends that are older than 26
 subset(friends, age > 26)
-```
 
-```
-##      name age child
-## Ella Ella  27  TRUE
-## Cora Cora  32  TRUE
-```
-
-```{.r .colsel}
 # select the information of the ages of friends
 subset(friends, select=age)
-```
-
-```
-##      age
-## Mina  21
-## Ella  27
-## Anna  26
-## Cora  32
 ```
 
 
 A data frame can be extended.
 
-
-```{.r .colsel}
+```{r}
 # add a column that has the information on the marrital status of friends
 friends$married <- c("YES", "YES", "NO", "YES")
 friends
 ```
 
-```
-##      name age child married
-## Mina Mina  21  TRUE     YES
-## Ella Ella  27  TRUE     YES
-## Anna Anna  26 FALSE      NO
-## Cora Cora  32  TRUE     YES
-```
-
 A data frame can also be extended using the functions cbind() and rbind().
 
-
-```{.r .colsel}
+```{r}
 # add a column that has the information on the salaries of friends
 cbind(friends, salary=c(4000, 8000, 2000, 6000))
-```
-
-```
-##      name age child married salary
-## Mina Mina  21  TRUE     YES   4000
-## Ella Ella  27  TRUE     YES   8000
-## Anna Anna  26 FALSE      NO   2000
-## Cora Cora  32  TRUE     YES   6000
 ```
 
 ### Lists: a list is an ordered collection of objects, which can be any type of R objects (vectors, matrices, data frames).
 
 A list can be created using the function list().
 
-
-```{.r .colsel}
+```{r}
 my_list <- list(mother="Sophia", father="John", sisters=c("Anna", "Emma"), sister_age=c(5, 10))
 my_list
 ```
 
-```
-## $mother
-## [1] "Sophia"
-## 
-## $father
-## [1] "John"
-## 
-## $sisters
-## [1] "Anna" "Emma"
-## 
-## $sister_age
-## [1]  5 10
-```
-
-
-```{.r .colsel}
+```{r}
 # names of elements in the list
 names(my_list)
 ```
 
-```
-## [1] "mother"     "father"     "sisters"    "sister_age"
-```
-
-
-```{.r .colsel}
+```{r}
 # number of elements in the list
 length(my_list)
 ```
 
-```
-## [1] 4
-```
-
 To access elements of a list can be done using its name or index.
 
-
-```{.r .colsel}
+```{r}
 my_list$mother
 ```
 
-```
-## [1] "Sophia"
-```
-
-
-```{.r .colsel}
+```{r}
 my_list[["mother"]]
 ```
 
-```
-## [1] "Sophia"
-```
-
-
-```{.r .colsel}
+```{r}
 my_list[[1]]
 ```
 
-```
-## [1] "Sophia"
-```
-
-
-```{.r .colsel}
+```{r}
 my_list[[3]]
 ```
 
-```
-## [1] "Anna" "Emma"
-```
-
-
-```{.r .colsel}
+```{r}
 my_list[[3]][2]
-```
-
-```
-## [1] "Emma"
 ```
 
 ---
@@ -1171,36 +548,18 @@ Topic 3. Import and export data in R
 
 R base function read.table() is a general funciton that can be used to read a file in table format. The data will be imported as a data frame.
 
-
-```{.r .colsel}
+```{r}
 # To read a local file. If you have downloaded the raw_counts.txt file to your local machine, you may use the following command to read it in, by providing the full path for the file location. The way to specify the full path is the same as taught in the command line session.
 data <- read.table(file="/Users/jli/Downloads/raw_counts.txt", sep="\t", header=T, stringsAsFactors=F)
 
 # There is a very convenient way to read files from the internet.
 data <- read.table(file="https://raw.githubusercontent.com/ucdavis-bioinformatics-training/2017-August-Variant-Analysis-Workshop/master/friday/Intro2R/raw_counts.txt", sep="\t", header=T, stringsAsFactors=F)
+
 ```
 
 Take a look at the beginning part of the data frame.
-
-```{.r .colsel}
+```{r}
 head(data)
-```
-
-```
-##            C61  C62  C63  C64  C91  C92  C93 C94 I561 I562 I563 I564 I591
-## AT1G01010  322  346  256  396  372  506  361 342  638  488  440  479  770
-## AT1G01020  149   87  162  144  189  169  147 108  163  141  119  147  182
-## AT1G01030   15   32   35   22   24   33   21  35   18    8   54   35   23
-## AT1G01040  687  469  568  651  885  978  794 862  799  769  725  715  811
-## AT1G01046    1    1    5    4    5    3    0   2    4    3    1    0    2
-## AT1G01050 1447 1032 1083 1204 1413 1484 1138 938 1247 1516  984 1044 1374
-##           I592 I593 I594 I861 I862 I863 I864 I891 I892 I893 I894
-## AT1G01010  430  656  467  143  453  429  206  567  458  520  474
-## AT1G01020  156  153  177   43  144  114   50  161  195  157  144
-## AT1G01030    8   16   24   42   17   22   39   26   28   39   30
-## AT1G01040  567  831  694  345  575  605  404  735  651  725  591
-## AT1G01046    8    8    1    0    4    0    3    5    7    0    5
-## AT1G01050 1355 1437 1577  412 1338 1051  621 1434 1552 1248 1186
 ```
 
 
@@ -1214,8 +573,7 @@ read.delim(): for reading "tab separated value" files (".txt"). By default, poin
 
 read.delim2(): for reading "tab separated value" files (".txt"). By default, comma (",") is used as decimal point.
 
-
-```{.r .colsel}
+```{r}
 # We are going to read a file over the internet by providing the url of the file.
 data2 <- read.csv(file="https://raw.githubusercontent.com/ucdavis-bioinformatics-training/2017-August-Variant-Analysis-Workshop/master/friday/Intro2R/raw_counts.csv", stringsAsFactors=F)
 
@@ -1223,29 +581,11 @@ data2 <- read.csv(file="https://raw.githubusercontent.com/ucdavis-bioinformatics
 head(data2)
 ```
 
-```
-##            C61  C62  C63  C64  C91  C92  C93 C94 I561 I562 I563 I564 I591
-## AT1G01010  322  346  256  396  372  506  361 342  638  488  440  479  770
-## AT1G01020  149   87  162  144  189  169  147 108  163  141  119  147  182
-## AT1G01030   15   32   35   22   24   33   21  35   18    8   54   35   23
-## AT1G01040  687  469  568  651  885  978  794 862  799  769  725  715  811
-## AT1G01046    1    1    5    4    5    3    0   2    4    3    1    0    2
-## AT1G01050 1447 1032 1083 1204 1413 1484 1138 938 1247 1516  984 1044 1374
-##           I592 I593 I594 I861 I862 I863 I864 I891 I892 I893 I894
-## AT1G01010  430  656  467  143  453  429  206  567  458  520  474
-## AT1G01020  156  153  177   43  144  114   50  161  195  157  144
-## AT1G01030    8   16   24   42   17   22   39   26   28   39   30
-## AT1G01040  567  831  694  345  575  605  404  735  651  725  591
-## AT1G01046    8    8    1    0    4    0    3    5    7    0    5
-## AT1G01050 1355 1437 1577  412 1338 1051  621 1434 1552 1248 1186
-```
-
 
 
 R base function write.table() can be used to export data to a file.
 
-
-```{.r .colsel}
+```{r}
 # To write to a file called "output.txt" in your current working directory.
 write.table(data2[1:20,], file="output.txt", sep="\t", quote=F, row.names=T, col.names=T)
 ```
@@ -1257,7 +597,9 @@ write.csv()
 write.csv2()
 
 
-\newpage
+```{r echo=FALSE, results='asis'}
+cat("\\newpage")
+```
 
 ---
 
@@ -1265,100 +607,35 @@ Topic 4. Functions in R
 ====================================================
 ### Invoking a function by its name, followed by the parenthesis and zero or more arguments.
 
-
-```{.r .colsel}
+```{r}
 # to find out the current working directory
 getwd()
-```
 
-```
-## [1] "/Users/jli/Jessie/Research/BioInfo/Courses/2019_August_UCD_mRNAseq_Workshop/intro2R"
-```
-
-```{.r .colsel}
 # to set a different working directory, use setwd
 #setwd("/Users/jli/Desktop")
 
 # to list all variables in the environment
 ls()
-```
 
-```
-##  [1] "a"             "age"           "b"             "col1"         
-##  [5] "col2"          "col3"          "colFmt"        "data"         
-##  [9] "data2"         "friend_ages"   "friend_groups" "friend_names" 
-## [13] "friends"       "has_child"     "hello"         "is_adult"     
-## [17] "is_female"     "is_male"       "my_data"       "my_friends"   
-## [21] "my_list"       "my_matrix"     "title"
-```
-
-```{.r .colsel}
 # to create a vector from 2 to 3, using increment of 0.1
 seq(2, 3, by=0.1)
-```
 
-```
-##  [1] 2.0 2.1 2.2 2.3 2.4 2.5 2.6 2.7 2.8 2.9 3.0
-```
-
-```{.r .colsel}
 # to create a vector with repeated elements
 rep(1:3, times=3)
-```
-
-```
-## [1] 1 2 3 1 2 3 1 2 3
-```
-
-```{.r .colsel}
 rep(1:3, each=3)
-```
 
-```
-## [1] 1 1 1 2 2 2 3 3 3
-```
-
-```{.r .colsel}
 # to get help information on a function in R: ?function.name
 ?seq
 ?sort
 ?rep
-```
 
-#### <font color='red'>One useful function to find out information on a variable: str().</font>  
+```  
+
+#### `r colFmt("One useful function to find out information on a variable: str().", 'red')`  
 
 
-
-```{.r .colsel}
+```{r}
 str(data2)
-```
-
-```
-## 'data.frame':	33602 obs. of  24 variables:
-##  $ C61 : int  322 149 15 687 1 1447 2667 297 0 74 ...
-##  $ C62 : int  346 87 32 469 1 1032 2472 226 0 79 ...
-##  $ C63 : int  256 162 35 568 5 1083 2881 325 0 138 ...
-##  $ C64 : int  396 144 22 651 4 1204 2632 341 0 85 ...
-##  $ C91 : int  372 189 24 885 5 1413 5120 199 0 68 ...
-##  $ C92 : int  506 169 33 978 3 1484 6176 180 0 41 ...
-##  $ C93 : int  361 147 21 794 0 1138 7088 195 0 110 ...
-##  $ C94 : int  342 108 35 862 2 938 6810 107 0 81 ...
-##  $ I561: int  638 163 18 799 4 1247 2258 377 0 72 ...
-##  $ I562: int  488 141 8 769 3 1516 1808 534 0 76 ...
-##  $ I563: int  440 119 54 725 1 984 2279 300 0 184 ...
-##  $ I564: int  479 147 35 715 0 1044 2299 223 0 156 ...
-##  $ I591: int  770 182 23 811 2 1374 4755 298 0 96 ...
-##  $ I592: int  430 156 8 567 8 1355 3128 318 0 70 ...
-##  $ I593: int  656 153 16 831 8 1437 4419 397 0 77 ...
-##  $ I594: int  467 177 24 694 1 1577 3726 373 0 77 ...
-##  $ I861: int  143 43 42 345 0 412 1452 86 0 174 ...
-##  $ I862: int  453 144 17 575 4 1338 1516 266 0 113 ...
-##  $ I863: int  429 114 22 605 0 1051 1455 281 0 69 ...
-##  $ I864: int  206 50 39 404 3 621 1429 164 0 176 ...
-##  $ I891: int  567 161 26 735 5 1434 3867 230 0 69 ...
-##  $ I892: int  458 195 28 651 7 1552 4718 270 0 80 ...
-##  $ I893: int  520 157 39 725 0 1248 4580 220 0 81 ...
-##  $ I894: int  474 144 30 591 5 1186 3575 229 0 62 ...
 ```
 
 
@@ -1367,159 +644,28 @@ str(data2)
 #### The difference between lapply() and apply() is that lapply() can be applied on objects like dataframes, lists or vectors. Function apply() only works on an array of dimension 2 or a matrix.
 
 ##### To check the syntax of using lapply():
-
-```{.r .colsel}
+```{r}
 #?lapply()
 
 data <- as.data.frame(matrix(rnorm(49), ncol=7), stringsAsFactors=F)
 dim(data)
-```
-
-```
-## [1] 7 7
-```
-
-```{.r .colsel}
 lapply(1:dim(data)[1], function(x){sum(data[x,])})
-```
-
-```
-## [[1]]
-## [1] -0.3174281
-## 
-## [[2]]
-## [1] -2.283905
-## 
-## [[3]]
-## [1] 7.128767
-## 
-## [[4]]
-## [1] 0.6884095
-## 
-## [[5]]
-## [1] -0.9601466
-## 
-## [[6]]
-## [1] -2.285518
-## 
-## [[7]]
-## [1] -1.082895
-```
-
-```{.r .colsel}
 apply(data, MARGIN=1, sum)
-```
-
-```
-## [1] -0.3174281 -2.2839046  7.1287674  0.6884095 -0.9601466 -2.2855184
-## [7] -1.0828954
-```
-
-```{.r .colsel}
 lapply(1:dim(data)[1], function(x){log10(sum(data[x,]))})
-```
-
-```
-## Warning in FUN(X[[i]], ...): NaNs produced
-
-## Warning in FUN(X[[i]], ...): NaNs produced
-
-## Warning in FUN(X[[i]], ...): NaNs produced
-
-## Warning in FUN(X[[i]], ...): NaNs produced
-
-## Warning in FUN(X[[i]], ...): NaNs produced
-```
-
-```
-## [[1]]
-## [1] NaN
-## 
-## [[2]]
-## [1] NaN
-## 
-## [[3]]
-## [1] 0.8530144
-## 
-## [[4]]
-## [1] -0.1621531
-## 
-## [[5]]
-## [1] NaN
-## 
-## [[6]]
-## [1] NaN
-## 
-## [[7]]
-## [1] NaN
 ```
 
 #### The function sapply() works like function lapply(), but tries to simplify the output to the most elementary data structure that is possible. As a matter of fact, sapply() is a "wrapper" function for lapply(). By default, it returns a vector.
 
-
-```{.r .colsel}
+```{r}
 # To check the syntax of using sapply():
 #?sapply()
 
 sapply(1:dim(data)[1], function(x){log10(sum(data[x,]))})
 ```
 
-```
-## Warning in FUN(X[[i]], ...): NaNs produced
-
-## Warning in FUN(X[[i]], ...): NaNs produced
-
-## Warning in FUN(X[[i]], ...): NaNs produced
-
-## Warning in FUN(X[[i]], ...): NaNs produced
-
-## Warning in FUN(X[[i]], ...): NaNs produced
-```
-
-```
-## [1]        NaN        NaN  0.8530144 -0.1621531        NaN        NaN
-## [7]        NaN
-```
-
 #### If the "simplify" parameter is turned off, sapply() will produced exactly the same results as lapply(), in the form of a list. By default, "simplify" is turned on.
-
-```{.r .colsel}
+```{r}
 sapply(1:dim(data)[1], function(x){log10(sum(data[x,]))}, simplify=FALSE)
-```
-
-```
-## Warning in FUN(X[[i]], ...): NaNs produced
-
-## Warning in FUN(X[[i]], ...): NaNs produced
-
-## Warning in FUN(X[[i]], ...): NaNs produced
-
-## Warning in FUN(X[[i]], ...): NaNs produced
-
-## Warning in FUN(X[[i]], ...): NaNs produced
-```
-
-```
-## [[1]]
-## [1] NaN
-## 
-## [[2]]
-## [1] NaN
-## 
-## [[3]]
-## [1] 0.8530144
-## 
-## [[4]]
-## [1] -0.1621531
-## 
-## [[5]]
-## [1] NaN
-## 
-## [[6]]
-## [1] NaN
-## 
-## [[7]]
-## [1] NaN
 ```
 
 ---
@@ -1527,107 +673,27 @@ sapply(1:dim(data)[1], function(x){log10(sum(data[x,]))}, simplify=FALSE)
 Topic 5. Basic statistics in R
 ====================================================
 
-<table class="table table-striped table-hover table-responsive" style="width: auto !important; margin-left: auto; margin-right: auto;">
- <thead>
-  <tr>
-   <th style="text-align:center;"> Description </th>
-   <th style="text-align:center;"> R_function </th>
-  </tr>
- </thead>
-<tbody>
-  <tr>
-   <td style="text-align:center;"> Mean </td>
-   <td style="text-align:center;"> mean() </td>
-  </tr>
-  <tr>
-   <td style="text-align:center;"> Standard deviation </td>
-   <td style="text-align:center;"> sd() </td>
-  </tr>
-  <tr>
-   <td style="text-align:center;"> Variance </td>
-   <td style="text-align:center;"> var() </td>
-  </tr>
-  <tr>
-   <td style="text-align:center;"> Minimum </td>
-   <td style="text-align:center;"> min() </td>
-  </tr>
-  <tr>
-   <td style="text-align:center;"> Maximum </td>
-   <td style="text-align:center;"> max() </td>
-  </tr>
-  <tr>
-   <td style="text-align:center;"> Median </td>
-   <td style="text-align:center;"> median() </td>
-  </tr>
-  <tr>
-   <td style="text-align:center;"> Range of values: minimum and maximum </td>
-   <td style="text-align:center;"> range() </td>
-  </tr>
-  <tr>
-   <td style="text-align:center;"> Sample quantiles </td>
-   <td style="text-align:center;"> quantile() </td>
-  </tr>
-  <tr>
-   <td style="text-align:center;"> Generic function </td>
-   <td style="text-align:center;"> summary() </td>
-  </tr>
-  <tr>
-   <td style="text-align:center;"> Interquartile range </td>
-   <td style="text-align:center;"> IQR() </td>
-  </tr>
-</tbody>
-</table>
+```{r echo=FALSE, results= 'asis'}
+library(knitr)
+kable(data.frame(Description=c("Mean", "Standard deviation", "Variance", "Minimum", "Maximum", "Median", "Range of values: minimum and maximum", "Sample quantiles", "Generic function", "Interquartile range"), R_function=c("mean()", "sd()", "var()", "min()", "max()", "median()", "range()", "quantile()", "summary()", "IQR()"), stringsAsFactors=F), align='c') %>% kable_styling(bootstrap_options=c("striped", "hover", "responsive"), full_width=F, position="center")
+```
 
 Calculate the mean expression for each sample.
 
-
-```{.r .colsel}
+```{r}
 apply(data, 2, mean)
-```
-
-```
-##          V1          V2          V3          V4          V5          V6 
-##  0.58151698 -0.13094011 -0.03371906  0.29437943  0.13954299 -0.80552851 
-##          V7 
-##  0.08150312
 ```
 
 Calculate the range of expression for each sample.
 
-
-```{.r .colsel}
+```{r}
 apply(data, 2, range)
-```
-
-```
-##             V1        V2        V3        V4        V5         V6
-## [1,] -1.801240 -1.162898 -1.337219 -1.452821 -2.046498 -1.8203052
-## [2,]  1.498391  1.127615  2.078304  1.094415  2.686425  0.2460147
-##             V7
-## [1,] -1.163337
-## [2,]  1.145920
 ```
 
 Calculate the quantiles of each samples.
 
-
-```{.r .colsel}
+```{r}
 apply(data, 2, quantile)
-```
-
-```
-##              V1         V2         V3         V4         V5           V6
-## 0%   -1.8012403 -1.1628978 -1.3372187 -1.4528209 -2.0464977 -1.820305214
-## 25%   0.3471181 -0.8984244 -0.7076474  0.1364465 -0.5736312 -1.461845953
-## 50%   0.9259403 -0.3359692 -0.6161227  0.6581213 -0.1559741 -1.123072530
-## 75%   1.3766458  0.6257598  0.5271493  0.7440236  0.8200552 -0.008822303
-## 100%  1.4983910  1.1276154  2.0783041  1.0944154  2.6864247  0.246014652
-##               V7
-## 0%   -1.16333684
-## 25%  -0.14710124
-## 50%  -0.01996111
-## 75%   0.45105133
-## 100%  1.14591964
 ```
 
 ---
@@ -1637,86 +703,51 @@ Topic 6. Simple data visulization in R
 
 Scatter plot and line plot can be produced using the function plot().
 
-
-```{.r .colsel}
+```{r}
 x <- c(1:50)
 y <- 1 + sqrt(x)/2
 plot(x,y)
-```
 
-![](Intro2R_files/figure-html/unnamed-chunk-69-1.png)<!-- -->
-
-```{.r .colsel}
 plot(x,y, type="l")
-```
 
-![](Intro2R_files/figure-html/unnamed-chunk-69-2.png)<!-- -->
-
-```{.r .colsel}
 # plot both the points and lines
 ## first plot points
 plot(x,y)
 lines(x,y, type="l")
-```
-
-![](Intro2R_files/figure-html/unnamed-chunk-69-3.png)<!-- -->
-
-```{.r .colsel}
 ## lines() can only be used to add information to a graph, while it cannot produce a graph on its own.
+
 ```
 
 
 boxplot() can be used to summarize data.
 
-
-```{.r .colsel}
+```{r}
 boxplot(data, xlab="Sample ID", ylab="Raw Counts")
 ```
 
-![](Intro2R_files/figure-html/unnamed-chunk-70-1.png)<!-- -->
-
 add more details to the plot.
 
-
-```{.r .colsel}
+```{r}
 boxplot(data, xlab="Sample ID", ylab="Raw Counts", main="Expression levels", col="blue", border="black")
 ```
 
-![](Intro2R_files/figure-html/unnamed-chunk-71-1.png)<!-- -->
 
-
-
-```{.r .colsel}
+```{r}
 x <- rnorm(1000)
 boxplot(x)
 ```
 
-![](Intro2R_files/figure-html/unnamed-chunk-72-1.png)<!-- -->
-
 hist() can be used to create histograms of data.
-
-```{.r .colsel}
+```{r}
 hist(x)
-```
 
-![](Intro2R_files/figure-html/unnamed-chunk-73-1.png)<!-- -->
-
-```{.r .colsel}
 # use user defined break points
 hist(x, breaks=seq(range(x)[1]-1, range(x)[2]+1, by=0.5))
 ```
 
-![](Intro2R_files/figure-html/unnamed-chunk-73-2.png)<!-- -->
-
-
-```{.r .colsel}
+```{r}
 # clear plotting device/area
 dev.off()
-```
-
-```
-## null device 
-##           1
 ```
 
 ---
@@ -1726,8 +757,7 @@ Topic 7. Install packages in R
 
 Starting from Bioconductor version 3.8, the installation of packages is recommended to use BiocManager.
 
-
-```{.r .colsel}
+```{r eval=FALSE}
 if (!requireNamespace("BiocManager"))
 	install.packages("BiocManager")
 ## install core packages
@@ -1743,10 +773,9 @@ BiocManager::install(c("ggplot2", "ShortRead"))
 * An indirect consequence of Bioconductor's structured release is that packages generally have more extensive dependences with one another.
 
 
-##### <font color='red'>It is always recommended to update to the most current version of R and Bioconductor. If it is not possible and R < 3.5.0, please use the legacy approach to install Bioconductor packages</font>   
+##### `r colFmt("It is always recommended to update to the most current version of R and Bioconductor. If it is not possible and R < 3.5.0, please use the legacy approach to install Bioconductor packages", 'red')`   
 
-
-```{.r .colsel}
+```{r eval=FALSE}
 source("http://bioconductor.org/biocLite.R")
 ## install core packages
 biocLite()
@@ -1757,14 +786,12 @@ biocLite(c("IdeoViz", "devtools"))
    
 The R function install.packages() can be used to install packages that are not part of Bioconductor.
 
-
-```{.r .colsel}
+```{r eval=FALSE}
 install.packages("ggplot2", repos="http://cran.us.r-project.org")
 ```
 
 Install from source of github.
-
-```{.r .colsel}
+```{r eval=FALSE}
 library(devtools)
 #install_github("stephenturner/qqman")
 ```
@@ -1777,8 +804,7 @@ Topic 8. Save data in R session
 
 #### To save history in R session
 
-
-```{.r .colsel}
+```{r}
 #savehistory(file="March27.history")
 
 #loadhistory(file="March27.history")
@@ -1786,8 +812,7 @@ Topic 8. Save data in R session
 
 #### To save objects in R session
 
-
-```{.r .colsel}
+```{r}
 save(list=c("x", "data"), file="March27.RData")
 
 #load("March27.RData")
@@ -1798,6 +823,6 @@ Challenge
 
 Read in the reference fasta file for PhiX that you have downloaded this morning and find out the length of PhiX genome and GC content.
 
-<font color='blue'>Hint: please look into bioconductor package ShortRead.</font>
+`r colFmt("Hint: please look into bioconductor package ShortRead.", 'blue')`
 
 
