--- a/differential_expression/DE_Analysis.Rmd
+++ b/differential_expression/DE_Analysis.Rmd
@@ -1,16 +1,15 @@
 ---
 title: "Differential Expression"
 author: "Bioinformatics Core"
-output:
-output: html_notebook
+output: html_document:
 ---
 
 # Differential Gene Expression Analysis in R
 
-* Differential Expression between conditions is determined from count data, which is modeled by a distribution (ie. Negative Binomial Distribution, Poisson, etc.) 
+* Differential Expression between conditions is determined from count data 
 * Generally speaking differential expression analysis is performed in a very similar manner to DNA microarrays, once normalization and transformations have been performed. 
-A lot of RNA-seq analysis has been done in R and so there are many packages available to analyze and view this data. Two of the best are: 
-* DESeq, developed by Simon Anders (also created htseq) in Wolfgang Huber’s group at EMBL
+A lot of RNA-seq analysis has been done in R and so there are many packages available to analyze and view this data. Two of the most commonly used are: 
+* DESeq2, developed by Simon Anders (also created htseq) in Wolfgang Huber’s group at EMBL
 * edgeR and Voom (extension to Limma [microarrays] for RNA-seq), developed out of Gordon Smyth’s group from the Walter and Eliza Hall Institute of Medical Research in Australia
 http://bioconductor.org/packages/release/BiocViews.html#___RNASeq
 
@@ -31,14 +30,14 @@ Together they allow fast, flexible, and powerful analyses of RNA-Seq data.  Limm
 ### Basic Steps
 1. Read count data into R
 2. Filter genes (uninteresting genes, e.g. unexpressed)
-3. Calculate normalizing factors (sample-specific adjustments)
-4. Calculate dispersion (gene-gene variance-stabilizing transformation)
-5. Fit a statistical model to you experiment
-6. Perform likely ratio tests on comparisons of interest (using contrasts)
+3. Calculate normalization factors (sample-specific adjustments)
+4. Account for expression-dependent variability by transformation, weighting, or modelling
+5. Fit a statistical model 
+6. Perform statistical on comparisons of interest (using contrasts)
 7. Adjust for multiple testing, Benjamini-Hochberg (BH) or q-value
 8. Check results for confidence
 9. Attach annotation if available and write tables
-10. Plotting routines.
+10. Plotting, enrichment analysis, interpretation
 
 ```{r}
 library(edgeR)
@@ -50,7 +49,7 @@ library("gplots")
 **1a./** Read in the counts table and preprocess
 ```{r}
 counts <- read.delim("rnaseq_workshop_counts.txt", row.names = 1)
-dim(counts) # number of genes left
+dim(counts) # number of genes 
 head(counts)
 ```
 
@@ -95,11 +94,11 @@ Note: you can also enter group information manually, or read it in from an exter
 
 In differential expression analysis, only sample-specific effects need to be normalized, NOT concerned with comparisons and quantification of absolute expression.
 * Sequence depth – is a sample specific effect and needs to be adjusted for.
-* RNA composition - finding a set of scaling factors for the library sizes that minimize the log-fold changes between the samples for most genes (uses a trimmed mean of M-values between each pair of sample)
+* RNA composition - finding a set of scaling factors for the library sizes that minimize the log-fold changes between the samples for most genes (edgeR uses a trimmed mean of M-values between each pair of sample)
 * GC content – is NOT sample-specific (except when it is)
 * Gene Length – is NOT sample-specific (except when it is)
 
-Normalization in edgeR/voom is model-based, you calculate normalization factors to scale the raw library sizes (number of reads) using the function calcNormFactors, which by default uses TMM (weighted trimmed means of M values to the reference). Assumes most genes are not DE.
+In edgeR/limma, you calculate normalization factors to scale the raw library sizes (number of reads) using the function calcNormFactors, which by default uses TMM (weighted trimmed means of M values to the reference). Assumes most genes are not DE.
 
 Proposed by Robinson and Oshlack (2010).
 
@@ -112,11 +111,11 @@ Note: calcNormFactors doesn't _normalize_ the data, it just calculates normaliza
 
 #### Filtering out genes
 
-Common filgter is to remove genes with a max value (X) of less then Y.
+Common filter is to remove genes with a max value (X) of less then Y.
 
 Another Common filter is to remove genes that are less than X normalized read counts (cpm) across a certain number of samples. Ex: rowSums(cpms <=1) < 3 , require at least 1 cpm in at least 3 samples to keep.
 
-A less used filter is for genes with minimum variance across all samples, so if a gene isn’t changing (constant expression) its inherently not interesting therefor no need to test
+A less used filter is for genes with minimum variance across all samples, so if a gene isn’t changing (constant expression) its inherently not interesting therefor no need to test.
 
 Filter low-expressed genes, remove any row (gene) whose max value (for the row) is less tha cutoff (3).
 ```{r}
@@ -133,9 +132,9 @@ Multidimensional scaling (MDS) plot
 plotMDS(d, col = as.numeric(group))
 ```
 
-The MDS plot tells you ALOT about what to expect from your experiment.
+The MDS plot tells you A LOT about what to expect from your experiment.
 
-**3\.** Extracting "normalized" expression table
+**3\.** Extracting normalized expression table
 
 ### RPKM vs. FPKM vs. CPM and Model Based
 * RPKM - Reads per kilobase per million mapped reads 
@@ -143,7 +142,7 @@ The MDS plot tells you ALOT about what to expect from your experiment.
 * logCPM – log Counts per million [ good for producing MDS plots, estimate of normalized values in model based ]
 * Model based - original read counts are not themselves transformed, but rather correction factors are used in the DE model itself.
 
-We use the cpm function with log=TRUE to approximate normalized expression data.
+We use the cpm function with log=TRUE to obtain log-transformed normalized expression data.  On the log scale, the data has less mean-dependent variability and is more suitable for plotting.
 ```{r}
 logcpm <- cpm(d, prior.count=2, log=TRUE)
 write.table(logcpm,"rnaseq_workshop_normalized_counts.txt",sep="\t",quote=F)
@@ -158,7 +157,7 @@ mm <- model.matrix(~0 + group)
 mm
 ```
 
-The above specifies a model where each coefficient corresponds to a group mean
+The above specifies a model where each coefficient corresponds to a group mean.
 
 Voom
 ```{r}
@@ -207,15 +206,13 @@ tmp <- contrasts.fit(fit, contr)
 
 The variance characteristics of low expressed genes are different from high expressed genes, if treated the same, the effect is to over represent low expressed genes in the DE list.
 
-<img src="de_figures/de_figure1.png" alt="de_figure1" width="600px"/>
-
 Empirical Bayes smoothing of standard errors (shrinks standard errors that are much larger or smaller than those from other genes towards the average standard error) (see https://www.degruyter.com/doi/10.2202/1544-6115.1027)
 
 ```{r}
 tmp <- eBayes(tmp)
 ```
 
-What genes are most differentially expressed (show the top20)?
+What genes are most differentially expressed (show the top 30)?
 ```{r}
 top.table <- topTable(tmp, sort.by = "P", n = Inf)
 head(top.table, 30)
@@ -236,14 +233,14 @@ length(which(top.table$adj.P.Val < 0.05))
 ### Multiple Testing Correction
 
 * Simply a must! Best choices are:
-  * FDR (false discovery rate), such as BH.
+  * FDR (false discovery rate), such as BH (Benjamini-Hochberg).
   * Qvalue
 
 * The FDR (or qvalue) is a statement about the list and is no longer about the gene (pvalue). So a FDR of 0.05, says you expect 5% false positives in the list of genes with an FDR of 0.05 or less.
 
 * The statement “Statistically significant” means FDR of 0.05 or less.
-My opinion is these genes do not require further validation (e.g. with qrtPCR)
-You can dip below the FDR of 0.05, but in my opinion you then need to validate those genes (e.g. with qrtPCR)
+Matt's opinion is these genes do not require further validation (e.g. with qrtPCR)
+You can dip below the FDR of 0.05 in the list, but in my opinion you then need to validate those genes (e.g. with qrtPCR)
 
 
 Write top.table to a file, adding in cpms and annotation
@@ -466,7 +463,8 @@ results <- decideTests(fit2)
 vennDiagram(results)
 ```
 
-## Both edgeR and limma voom have VERY comprehensive user manuals
+## Both edgeR and limma have VERY comprehensive user manuals
+The limma users' guide has great details on model specification.
 
 * [Limma voom](https://bioconductor.org/packages/release/bioc/vignettes/limma/inst/doc/usersguide.pdf)
 
