--- a/differential_expression/DE_Analysis.Rmd
+++ b/differential_expression/DE_Analysis.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Differential Expression"
 author: "Bioinformatics Core"
-output: html_document:
+output: html_document
 ---
 
 # Differential Gene Expression Analysis in R
