--- a/intro2R/data_in_R.Rmd
+++ b/intro2R/data_in_R.Rmd
@@ -477,7 +477,7 @@ grid.arrange(k, l, nrow = 1)
 ### Fancy Multiple plots in a grid
 The gridExtra package is great for plotting multiple object in one plot.
 
-```{r grid_image, fig.width=1,fig.height=1}
+```{r grid_image, echo=FALSE, fig.width=1,fig.height=1}
 include_graphics("https://raw.githubusercontent.com/ucdavis-bioinformatics-training/2019_August_UCD_mRNAseq_Workshop/master/intro2R/Data_in_R_figures/grid_plot.png")
 ```
 
